--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,20 @@
   h4,
   h5,
   h6 {
-    @apply font-pop text-gray-800;
+    @apply font-mont font-semibold text-gray-800;
+  }
+  h1 {
+    @apply text-2xl lg:text-4xl;
+  }
+  h2 {
+    @apply text-xl lg:text-3xl;
+  }
+  h3 {
+    @apply text-lg lg:text-3xl;
+  }
+}
+@layer components {
+  .btn {
+    @apply text-sm font-semibold px-5 py-2 shadow-md rounded border border-violet-700 bg-violet-700 text-white text-center ease-in cursor-pointer hover:border-orange-600 hover:text-white hover:bg-orange-600;
   }
 }
